Documentation updated (current version: 0.1.6).

--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; subgroups 0.1.5 documentation</title>
+  <title>Index &mdash; subgroups 0.1.6 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=92fd9be5" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
 
@@ -14,7 +14,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=59fadc99"></script>
+        <script src="_static/documentation_options.js?v=6e0256f3"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -738,9 +738,13 @@
 </li>
         <li><a href="project_files/subgroups.tests.utils.html#module-subgroups.tests.utils.test_dataframe_filters">subgroups.tests.utils.test_dataframe_filters</a>
 </li>
+        <li><a href="project_files/subgroups.tests.utils.html#module-subgroups.tests.utils.test_file_format_transformations">subgroups.tests.utils.test_file_format_transformations</a>
+</li>
         <li><a href="project_files/subgroups.utils.html#module-subgroups.utils">subgroups.utils</a>
 </li>
         <li><a href="project_files/subgroups.utils.html#module-subgroups.utils.dataframe_filters">subgroups.utils.dataframe_filters</a>
+</li>
+        <li><a href="project_files/subgroups.utils.html#module-subgroups.utils.file_format_transformations">subgroups.utils.file_format_transformations</a>
 </li>
         <li><a href="project_files/subgroups.utils.html#module-subgroups.utils.mdl">subgroups.utils.mdl</a>
 </li>
@@ -1234,8 +1238,6 @@
         <li><a href="project_files/subgroups.quality_measures.html#module-subgroups.quality_measures.binomial_test">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     subgroups.quality_measures.binomial_test_optimistic_estimate_1
 
@@ -1243,6 +1245,8 @@
         <li><a href="project_files/subgroups.quality_measures.html#module-subgroups.quality_measures.binomial_test_optimistic_estimate_1">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     subgroups.quality_measures.coverage
 
@@ -1552,6 +1556,13 @@
 </li>
       </ul></li>
       <li>
+    subgroups.tests.utils.test_file_format_transformations
+
+      <ul>
+        <li><a href="project_files/subgroups.tests.utils.html#module-subgroups.tests.utils.test_file_format_transformations">module</a>
+</li>
+      </ul></li>
+      <li>
     subgroups.utils
 
       <ul>
@@ -1563,6 +1574,13 @@
 
       <ul>
         <li><a href="project_files/subgroups.utils.html#module-subgroups.utils.dataframe_filters">module</a>
+</li>
+      </ul></li>
+      <li>
+    subgroups.utils.file_format_transformations
+
+      <ul>
+        <li><a href="project_files/subgroups.utils.html#module-subgroups.utils.file_format_transformations">module</a>
 </li>
       </ul></li>
       <li>
@@ -1746,12 +1764,12 @@
 </li>
       <li><a href="project_files/subgroups.tests.algorithms.subgroup_sets.html#subgroups.tests.algorithms.subgroup_sets.test_sdmap.TestSDMap.test_SDMap_init_method_1">test_SDMap_init_method_1() (subgroups.tests.algorithms.subgroup_sets.test_sdmap.TestSDMap method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="project_files/subgroups.tests.algorithms.subgroup_sets.html#subgroups.tests.algorithms.subgroup_sets.test_sdmap.TestSDMap.test_SDMap_init_method_2">test_SDMap_init_method_2() (subgroups.tests.algorithms.subgroup_sets.test_sdmap.TestSDMap method)</a>
 </li>
       <li><a href="project_files/subgroups.tests.algorithms.subgroup_sets.html#subgroups.tests.algorithms.subgroup_sets.test_sdmap.TestSDMap.test_SDMap_unselected_and_selected_subgroups">test_SDMap_unselected_and_selected_subgroups() (subgroups.tests.algorithms.subgroup_sets.test_sdmap.TestSDMap method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="project_files/subgroups.tests.algorithms.subgroup_sets.html#subgroups.tests.algorithms.subgroup_sets.test_sdmapstar.TestSDMapStar.test_SDMapStar_additional_parameters_in_fit_method">test_SDMapStar_additional_parameters_in_fit_method() (subgroups.tests.algorithms.subgroup_sets.test_sdmapstar.TestSDMapStar method)</a>
 </li>
       <li><a href="project_files/subgroups.tests.algorithms.subgroup_sets.html#subgroups.tests.algorithms.subgroup_sets.test_sdmapstar.TestSDMapStar.test_SDMapStar_fit_method_1">test_SDMapStar_fit_method_1() (subgroups.tests.algorithms.subgroup_sets.test_sdmapstar.TestSDMapStar method)</a>
@@ -1819,6 +1837,12 @@
       <li><a href="project_files/subgroups.tests.data_structures.html#subgroups.tests.data_structures.test_subgroup_list.TestSubgroupList.test_subgroup_list_4">test_subgroup_list_4() (subgroups.tests.data_structures.test_subgroup_list.TestSubgroupList method)</a>
 </li>
       <li><a href="project_files/subgroups.algorithms.subgroup_sets.html#subgroups.algorithms.subgroup_sets.qfinder.QFinder.test_subgroups">test_subgroups() (subgroups.algorithms.subgroup_sets.qfinder.QFinder method)</a>
+</li>
+      <li><a href="project_files/subgroups.tests.utils.html#subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms.test_to_input_format_for_subgroup_list_algorithms_1">test_to_input_format_for_subgroup_list_algorithms_1() (subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms method)</a>
+</li>
+      <li><a href="project_files/subgroups.tests.utils.html#subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms.test_to_input_format_for_subgroup_list_algorithms_2">test_to_input_format_for_subgroup_list_algorithms_2() (subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms method)</a>
+</li>
+      <li><a href="project_files/subgroups.tests.utils.html#subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms.test_to_input_format_for_subgroup_list_algorithms_3">test_to_input_format_for_subgroup_list_algorithms_3() (subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms method)</a>
 </li>
       <li><a href="project_files/subgroups.tests.data_structures.html#subgroups.tests.data_structures.test_vertical_list_with_bitsets.TestVerticalListWithBitsets.test_vertical_list_1">test_vertical_list_1() (subgroups.tests.data_structures.test_vertical_list_with_bitsets.TestVerticalListWithBitsets method)</a>
 
@@ -1898,6 +1922,8 @@
 </li>
       <li><a href="project_files/subgroups.tests.data_structures.html#subgroups.tests.data_structures.test_subgroup_list.TestSubgroupList">TestSubgroupList (class in subgroups.tests.data_structures.test_subgroup_list)</a>
 </li>
+      <li><a href="project_files/subgroups.tests.utils.html#subgroups.tests.utils.test_file_format_transformations.TestToInputFormatForSubgroupListAlgorithms">TestToInputFormatForSubgroupListAlgorithms (class in subgroups.tests.utils.test_file_format_transformations)</a>
+</li>
       <li><a href="project_files/subgroups.tests.data_structures.html#subgroups.tests.data_structures.test_vertical_list_with_bitsets.TestVerticalListWithBitsets">TestVerticalListWithBitsets (class in subgroups.tests.data_structures.test_vertical_list_with_bitsets)</a>
 </li>
       <li><a href="project_files/subgroups.tests.data_structures.html#subgroups.tests.data_structures.test_vertical_list_with_sets.TestVerticalListWithSets">TestVerticalListWithSets (class in subgroups.tests.data_structures.test_vertical_list_with_sets)</a>
@@ -1905,6 +1931,8 @@
       <li><a href="project_files/subgroups.tests.algorithms.subgroup_sets.html#subgroups.tests.algorithms.subgroup_sets.test_vlsd.TestVLSD">TestVLSD (class in subgroups.tests.algorithms.subgroup_sets.test_vlsd)</a>
 </li>
       <li><a href="project_files/subgroups.data_structures.html#subgroups.data_structures.fp_tree_for_sdmap.FPTreeForSDMap.there_is_a_single_path">there_is_a_single_path() (subgroups.data_structures.fp_tree_for_sdmap.FPTreeForSDMap method)</a>
+</li>
+      <li><a href="project_files/subgroups.utils.html#subgroups.utils.file_format_transformations.to_input_format_for_subgroup_list_algorithms">to_input_format_for_subgroup_list_algorithms() (in module subgroups.utils.file_format_transformations)</a>
 </li>
       <li><a href="project_files/subgroups.algorithms.subgroup_sets.html#subgroups.algorithms.subgroup_sets.qfinder.QFinder.top_patterns">top_patterns (subgroups.algorithms.subgroup_sets.qfinder.QFinder property)</a>
 </li>
